HTML, CSS e JS finalizados

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <main>
         <div>
             <label>Qual tabuada você deseja saber?</label>
-            <input type="number">
+            <input type="number" id="num">
         </div>
         <div>
             <label>Até que número você quer?</label>
-            <input type="number">
+            <input type="number" id="end">
         </div>
         <div>    
-            <button>CALCULAR</button>
-            <p>Preencha os valores acima!</p>
+            <button id="calcular" onclick="tabuada()"><b>CALCULAR</b></button>
+            <p id="resposta">Preencha os valores acima!</p>
         </div>
         </main>
     <script src="main.js"></script>
